# fastapi-crud

./: .env  .gitignore  README.md  db.py  exceptions.py  main.py  models.py  pyproject.toml  scheme.py  service.py  settings.py
